fixed drawing bug: canvas was being stretched

--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,12 @@ label {
     border:1px solid red;
 }
 
+button {
+    padding: 10px;
+    margin-bottom: 4px;
+    margin-top: 4px;
+}
+
 ul {
     list-style: none;
 }
